# bevy_third_person_camera_2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: follow_cube.rs  multiple_cameras.rs  split_screen.rs
src/: components.rs  events.rs  lib.rs  observers.rs  plugin_settings.rs  systems.rs
src/systems/: base.rs  gizmo_lines.rs  mod.rs
