
[package]
name = "bevy_third_person_camera_2"
version = "0.1.2"
edition = "2024"

authors = ["Hattiffnat <sereyfeam@gmail.com>"]
description = "Simple and flexible plugin for Bevy game engine"
license = "MIT"
repository = "https://github.com/Hattiffnat/bevy_third_person_camera_2"
readme = "README.md"

[dependencies]
bevy = "0.16"
