
[package]
name = "bevy_third_person_camera_2"
version = "0.1.3"
edition = "2024"

authors = ["Hattiffnat <sereyfeam@gmail.com>"]
description = "Simple and flexible plugin for Bevy game engine"
keywords = ["bevy", "camera", "orbit", "gamedev"]
categories = ["game-development"]
license = "MIT"
repository = "https://github.com/Hattiffnat/bevy_third_person_camera_2"
readme = "README.md"

[dependencies]
bevy = "0.17"

[dev-dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
