
[package]
name = "bevy_third_person_camera_2"
version = "0.1.8"
edition = "2024"

authors = ["Hattiffnat <sereyfeam@gmail.com>"]
description = "Simple and flexible plugin for Bevy game engine"
keywords = ["bevy", "camera", "orbit", "gamedev"]
categories = ["game-development"]
license = "MIT"
repository = "https://github.com/Hattiffnat/bevy_third_person_camera_2"
readme = "README.md"

[features]
draw_relation_lines = ["bevy/bevy_gizmos"]

[dependencies.bevy]
version = "0.17"

default-features = false
features = ["bevy_log", "bevy_window"]

[dev-dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "dynamic_linking",
    "bevy_log",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_window",
    "bevy_winit",
    "wayland",
    "x11",
    "tonemapping_luts",
    "zstd_rust",
]
